--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
         </div>
 
         <!-- BOOKMARKLET_PLACEHOLDER -->
-        <a href="javascript:(function () { const PRICE_PER_POINT = 999 / 6; const DISCOUNT_THRESHOLD = 0.75; const getPointsNeeded = (price) => { return Math.ceil(price / 250); }; const priceElements = document.querySelectorAll(".item-price-box .item-price"); priceElements.forEach(el => { const match = el.textContent.match(/NT\$ ?(\d+)/); if (!match) return; const price = parseInt(match[1], 10); const points = getPointsNeeded(price); const cost = points * PRICE_PER_POINT; const discount = cost / price; if (discount <= DISCOUNT_THRESHOLD) { el.style.backgroundColor = "#c8facc"; el.style.borderRadius = "4px"; el.style.padding = "2px 4px"; } const label = document.createElement("span"); label.textContent = ` (領書=${Math.round(discount * 100)}%)`; label.style.color = discount <= DISCOUNT_THRESHOLD ? "#0a8f3c" : "#555"; label.style.fontSize = "0.9em"; label.style.marginLeft = "4px"; el.appendChild(label); }); })();" class="bookmarklet">
+        <a href="javascript:document.querySelectorAll(".item-price-box .item-price").forEach((e=>{const t=e.textContent.match(/NT\$ ?(\d+)/)
+if(!t)return
+const n=parseInt(t[1],10),c=(e=>Math.ceil(e/250))(n),o=166.5*c/n
+o<=.75&&(e.style.backgroundColor="#c8facc",e.style.borderRadius="4px",e.style.padding="2px 4px")
+const r=document.createElement("span")
+r.textContent=` (領書=${Math.round(100*o)}%)`,r.style.color=o<=.75?"#0a8f3c":"#555",r.style.fontSize="0.9em",r.style.marginLeft="4px",e.appendChild(r)}))" class="bookmarklet">
             讀墨嗜讀輔助
         </a>
     </div>
